# SonarTracker715

./: .gitignore  CMakeLists.txt  delete_Identifier.txt  gemini_TXT.txt  github_wsl.txt  mock_sonar.py  python_TXT.txt
JSON/: Depth_GroundTruth_TargetA.json  GroundTruth_4Targets.json  GroundTruth_6Targets.json  GroundTruth_Targets.json
doc/: ~$软件界面修改意见.docx  ~$软件设计.docx  被动软件界面修改意见.docx  软件设计.docx
src/core/: CBFProcessor.cpp  DataBuffer.h  DataTypes.h  Deconvolution.cpp  Deconvolution.h  DspWorker.cpp  DspWorker.h  MfpProcessor.cpp  MfpProcessor.h  SelfValidator.cpp  SelfValidator.h  TrackManager.cpp  TrackManager.h  UdpReceiver.cpp  UdpReceiver.h  detect_line_spectrum_from_lofar_change.cpp  detect_line_spectrum_from_lofar_change.h
src/ui/: MainWindow.cpp  MainWindow.h  NotificationWidget.cpp  NotificationWidget.h
